# hyperion.ng

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  TODO
cmake/: Dependencies.cmake
config/: hyperion.config.json.commented  hyperion.config.json.default
dependencies/: CMakeLists-qmdnsengine.txt.in  CMakeLists.txt
effects/: Seawaves.json  atomic.json  breath.json  candle.json  cinema-fade-in.json  cinema-fade-off.json  double-swirl.json  knight-rider.json  light-clock.json  mood-blobs-blue.json  mood-blobs-cold.json  mood-blobs-green.json  mood-blobs-red.json  mood-blobs-warm.json  notify-blue.json  police-lights-single.json  police-lights-solid.json  shutdown.json  snake.json  sparks.json  strobe-red.json  strobe-white.json  trails.json  trails_color.json  x-mas.json
libsrc/: CMakeLists.txt
libsrc/api/: JsonAPI.cpp  JsonCB.cpp
libsrc/bonjour/: bonjourbrowserwrapper.cpp  bonjourservicebrowser.cpp  bonjourserviceregister.cpp  bonjourserviceresolver.cpp
libsrc/flatbufserver/: FlatBufferClient.cpp  FlatBufferClient.h  FlatBufferConnection.cpp  FlatBufferServer.cpp
libsrc/grabber/: CMakeLists.txt  Grabber.cpp  GrabberFactory.cpp  GrabberWrapper.cpp
libsrc/grabber/directx/: CMakeLists.txt
libsrc/grabber/screen/qt/: QtGrabber.cpp  QtGrabber.h
libsrc/grabber/video/mediafoundation/: MFGrabber.cpp  MFGrabber.h  MFSourceReaderCB.h
libsrc/hyperion/: CMakeLists.txt  ComponentRegister.cpp  GrabberWrapper.cpp  Hyperion.cpp  LinearColorSmoothing.cpp  MessageForwarder.cpp
libsrc/hyperion/schema/: schema-backgroundEffect.json  schema-blackborderdetector.json  schema-boblightServer.json  schema-color.json  schema-device.json  schema-effects.json  schema-flatbufServer.json  schema-foregroundEffect.json  schema-forwarder.json  schema-framegrabber.json  schema-general.json  schema-grabberAudio.json  schema-grabberV4L2.json  schema-instCapture.json  schema-logger.json  schema-network.json  schema-protoServer.json  schema-smoothing.json
libsrc/jsonserver/: JsonServer.cpp
libsrc/leddevice/: CMakeLists.txt  LedDevice.cpp  LedDeviceWrapper.cpp
libsrc/leddevice/dev_hid/: LedDeviceHyperionUsbasp.cpp  LedDeviceHyperionUsbasp.h  LedDeviceLightpack.cpp  LedDeviceLightpack.h
libsrc/leddevice/dev_net/: LedDeviceCololight.cpp  LedDeviceCololight.h  LedDeviceNanoleaf.cpp  LedDeviceNanoleaf.h  LedDeviceWled.cpp  LedDeviceWled.h  LedDeviceYeelight.cpp  LedDeviceYeelight.h  ProviderRestApi.cpp  ProviderRestApi.h  ProviderUdp.cpp  ProviderUdp.h
libsrc/leddevice/schemas/: schema-adalight.json  schema-atmoorb.json  schema-cololight.json  schema-fadecandy.json  schema-file.json  schema-nanoleaf.json  schema-wled.json  schema-wled_check.json
libsrc/mdns/: CMakeLists.txt  mdnsEngineWrapper.cpp  qmdnsenginewrapper.cpp
libsrc/utils/: EncoderThread.cpp  ImageResampler.cpp
libsrc/webserver/: WebServer.cpp
src/: CMakeLists.txt
(+105 files in other folders)
